fixed part of temp control bug

--- a/PackManager/PackManager/Base.lproj/Main_iPhone.storyboard
+++ b/PackManager/PackManager/Base.lproj/Main_iPhone.storyboard
@@ -906,6 +906,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="aBc-ms-JnL"/>
+        <segue reference="e4e-5l-C95"/>
     </inferredMetricsTieBreakers>
 </document>
