--- a/PackManager/PackManager/Base.lproj/Main_iPhone.storyboard
+++ b/PackManager/PackManager/Base.lproj/Main_iPhone.storyboard
@@ -140,7 +140,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="weatherReportCell" id="piZ-9Q-kE2" customClass="LayeredRightDetailTableViewCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="weatherReportCell" id="piZ-9Q-kE2" customClass="LayeredRightDetailCell">
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="piZ-9Q-kE2" id="Lb2-bD-pVb">
@@ -193,7 +193,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="lowerDetailTextLabel" destination="Z9R-fe-GB3" id="L17-8S-sFe"/>
-                                    <outlet property="textLabel" destination="df1-QY-2bI" id="Vm8-7O-upz"/>
+                                    <outlet property="mainTextLabel" destination="df1-QY-2bI" id="yRz-eA-JL9"/>
                                     <outlet property="upperDetailTextLabel" destination="1Bz-b6-fDi" id="9ml-Jk-aZr"/>
                                     <segue destination="y9H-Xt-eLl" kind="push" identifier="showWeatherReport" id="Vsh-Fm-wHO"/>
                                 </connections>
